--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
+.hidden {
+    display: none !important;
+}
 
 body {
-    background-color: black;
+    background-color: #121212;
     color: white;
 }
 
@@ -17,7 +20,11 @@ body {
 }
 
 .header-h1 {
-    margin: 40px 30px 50px 0px;
+    margin: 45px 30px 50px 0px;
+}
+
+.navbar {
+    margin-bottom: 30px;
 }
 
 .project-section h3 {
