--- a/css/styles.css
+++ b/css/styles.css
@@ -27,12 +27,109 @@ body {
     margin-bottom: 30px;
 }
 
-.project-section h3 {
+.navbar a:hover {
+    color: #7CA3C3;
+}
+
+.navbar .dropdown-item {
+    color: rgba(255,255,255,.55);
+}
+
+.navbar .dropdown-item:hover {
+    background-color: #7CA3C3;
+    color: black;
+}
+
+.project-section h3, .project-header h3 {
     margin: 10px 0px 30px 0px;
-    border-bottom: 2px solid white;
     padding: 2px 0px;
 }
 
-.project-section p, .project-section a {
-    margin-bottom: 30px;
+.project-section h3 {
+    border-bottom: 2px solid #b5b5b5;
+}
+
+.dropdown-label {
+    display: block;
+    width: 100%;
+    padding: 0.25rem 1rem;
+    clear: both;
+    font-weight: 400;
+    color: #212529;
+    text-align: inherit;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border: 0;
+    color: white;
+}
+
+.project a img {
+    opacity: 1;
+    transition: opacity .25s ease-in-out;
+  -moz-transition: opacity .25s ease-in-out;
+  -webkit-transition: opacity .25s ease-in-out;
+}
+
+.project-section a:hover img {
+    opacity: 0.5;
+    transition: opacity .25s ease-in-out;
+  -moz-transition: opacity .25s ease-in-out;
+  -webkit-transition: opacity .25s ease-in-out;
+}
+
+.project-col {
+    margin-bottom: 40px;
+}
+
+.project-section .project-col a{
+    color: #7CA3C3;
+    text-decoration: underline;
+}
+
+.project-section .project-col a:hover {
+    color: blue;
+    text-decoration: underline;
+}
+
+/*Badges */
+
+.badges {
+    margin-bottom: 10px;
+}
+
+.badge-html {
+    background-color: #268e3e;
+}
+
+.badge-css {
+    background-color: blue;
+}
+
+.badge-js {
+    background-color: #a1bf1a;
+}
+
+.badge-wp {
+    background-color: navy;
+}
+
+.badge-php {
+    background-color: #ff005d;
+}
+
+.badge-net {
+    background-color: #9b0000;
+}
+
+.project-header h2{
+    /*border-bottom: 2px solid white;*/
+}
+
+.project-section p, .project-section a{
+    margin-bottom: 4px;
+}
+
+.project-section {
+    color: rgba(255,255,255,.55);
 }
