--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,10 @@ body {
     padding-left: 0px !important;
 }
 
+.underline-header {
+    border-bottom: 2px solid white;
+}
+
 .project-header {
     margin: 50px 0px;
 }
@@ -63,10 +67,6 @@ body {
     margin: 10px 0px 10px 0px;
 }
 
-.project-section h3 {
-    border-bottom: 2px solid #b5b5b5;
-}
-
 .resume-section h3 {
     margin: 50px 0px 20px;
 }
@@ -74,6 +74,16 @@ body {
 /* Jobs */
 .job {
     padding: 30px;
+    border-right: 0px;
+    border-left: 0px;
+}
+
+.job:first-child {
+    border-top: 0px;
+}
+
+.job:last-child {
+    border-bottom: 0px;
 }
 
 .job h4 {
@@ -88,7 +98,9 @@ body {
     font-style: italic;
 }
 
-
+.portfolio-header {
+    margin-top: 120px;
+}
 
 .dropdown-label {
     display: block;
@@ -120,7 +132,7 @@ body {
 }
 
 .project-col {
-    margin-bottom: 80px;
+    margin-bottom: 100px;
 }
 
 .project-section .project-col a{
