--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,11 @@ body {
     margin-bottom: 60px;
 }
 
+.contact-header {
+    margin-top: 40px;
+    margin-bottom: 10px;
+}
+
 .img-fluid {
     margin-bottom: 10px;
 }
@@ -190,8 +195,29 @@ h3 {
     margin-bottom: 4px;
 }
 
+.form-contact .form-group {
+    margin-bottom: 10px;
+}
 
+.bg-dark .form-control {
+    color: white !important;
+    background-color: #121212 !important;
+}
 
 .project-section p, .resume-section p{
     color: rgba(255,255,255,.55);
+}
+
+.form-contact {
+    background-color: #121212;
+    color: white;
+}
+
+.form-contact label {
+    width: 100%;
+    text-align: right;
+}
+
+footer {
+    padding: 80px 0px 50px;
 }
