--- a/css/styles.css
+++ b/css/styles.css
@@ -1,33 +1,4 @@
-.hidden {
-  display: none !important;
-}
-
-.loading-spinner {
-  position: absolute;
-  width: 100%;
-  text-align: center;
-  top: 50%;
-}
-
-.loading-spinner .spinner-border {
-  margin: 0px auto;
-  text-align: center;
-}
-
-.main-content {
-  opacity: 0;
-  transition: opacity 2s ease-in-out;
-  -moz-transition: opacity 2s ease-in-out;
-  -webkit-transition: opacity 2s ease-in-out;
-}
-
-.navbar-nav .nav-item {
-  opacity: 0;
-  transition: opacity 2s ease-in-out;
-  -moz-transition: opacity 2s ease-in-out;
-  -webkit-transition: opacity 2s ease-in-out;
-}
-
+/* GENERAL STYLES */
 body {
   background-color: #161616;
   color: white;
@@ -41,29 +12,20 @@ h4 {
   font-weight: 500;
 }
 
+h3 {
+  padding-left: 0px;
+}
+
 .larger {
   font-size: 1.4em;
 }
 
-.bio-image {
-  padding-bottom: 15px;
-}
-
-.list-group {
-  border-radius: 0px;
+.hidden {
+  display: none !important;
 }
 
 .bg-dark {
   background-color: #121212 !important;
-}
-
-.project-header h2 {
-  padding-left: 0px !important;
-}
-
-.card {
-  margin-bottom: 20px;
-  padding: 20px;
 }
 
 .underline-header {
@@ -71,21 +33,11 @@ h4 {
   border-bottom: 2px solid white;
 }
 
-.contact-header {
-  margin-top: 40px;
-  margin-bottom: 10px;
-}
-
 .img-fluid {
   margin: 0px auto;
 }
 
-.bg-dark .list-group-item {
-  color: white;
-  text-decoration: none;
-  background-color: #121212;
-  border-color: #353535;
-}
+/* HEADER */
 
 .header-h1 {
   margin: 45px 30px 50px 0px;
@@ -108,66 +60,11 @@ h4 {
   color: black;
 }
 
-.resume-header h2,
-.resume-header h3 {
-  padding-left: 0px;
-  margin-bottom: 0px;
-}
-
-h3 {
-  padding-left: 0px;
-}
-
-.project-section h3,
-.project-header h3,
-.resume-section h3,
-.resume-header h3 {
-  padding: 2px 0px;
-}
-
-.project-section h3,
-.project-header h3 {
-  margin: 10px 0px 30px 0px;
-}
-
-.resume-section h3,
-.resume-header h3 {
-  margin: 10px 0px 0px 0px;
-}
-
-.resume-section h3 {
-  margin: 50px 0px 20px;
-}
-
-/* Jobs */
-.job {
-  padding: 30px;
-  border-right: 0px;
-  border-left: 0px;
-}
-
-.job:first-child {
-  border-top: 0px;
-}
-
-.job:last-child {
-  border-bottom: 0px;
-}
-
-.job h4 {
-  margin-bottom: 3px;
-}
-
-.job .role {
-  margin-bottom: 0px;
-}
-
-.job .dates {
-  font-style: italic;
-}
-
-.portfolio-header {
-  margin-top: 120px;
+.navbar-nav .nav-item {
+  opacity: 0;
+  transition: opacity 2s ease-in-out;
+  -moz-transition: opacity 2s ease-in-out;
+  -webkit-transition: opacity 2s ease-in-out;
 }
 
 .dropdown-label {
@@ -185,31 +82,56 @@ h3 {
   color: white;
 }
 
-.project a img {
-  opacity: 1;
-  transition: opacity 0.25s ease-in-out;
-  -moz-transition: opacity 0.25s ease-in-out;
-  -webkit-transition: opacity 0.25s ease-in-out;
+/* LOADING ANIMATION */
+
+.loading-spinner {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  top: 50%;
 }
 
-.project-section a:hover img {
-  opacity: 0.5;
-  transition: opacity 0.25s ease-in-out;
-  -moz-transition: opacity 0.25s ease-in-out;
-  -webkit-transition: opacity 0.25s ease-in-out;
+.loading-spinner .spinner-border {
+  margin: 0px auto;
+  text-align: center;
 }
 
-.project-section .project-col a {
-  color: #7ca3c3;
-  text-decoration: underline;
+/* MAIN CONTENT */
+
+.main-content {
+  opacity: 0;
+  transition: opacity 2s ease-in-out;
+  -moz-transition: opacity 2s ease-in-out;
+  -webkit-transition: opacity 2s ease-in-out;
 }
 
-.project-section .project-col a:hover {
-  color: blue;
-  text-decoration: underline;
+/* ABOUT SECTION */
+
+.bio-image {
+  padding-bottom: 15px;
 }
 
-/*Badges */
+/* PROJECTS SECTION */
+
+.list-group {
+  border-radius: 0px;
+}
+
+.project-header h2 {
+  padding-left: 0px !important;
+}
+
+.card {
+  margin-bottom: 20px;
+  padding: 20px;
+}
+
+.bg-dark .list-group-item {
+  color: white;
+  text-decoration: none;
+  background-color: #121212;
+  border-color: #353535;
+}
 
 .badges {
   margin-bottom: 10px;
@@ -244,6 +166,111 @@ h3 {
   background-color: #5d2d92;
 }
 
+.project a img {
+  opacity: 1;
+  transition: opacity 0.25s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out;
+  -webkit-transition: opacity 0.25s ease-in-out;
+}
+
+.project-section a:hover img {
+  opacity: 0.5;
+  transition: opacity 0.25s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out;
+  -webkit-transition: opacity 0.25s ease-in-out;
+}
+
+.project-section .project-col a {
+  color: #7ca3c3;
+  text-decoration: underline;
+}
+
+.project-section .project-col a:hover {
+  color: blue;
+  text-decoration: underline;
+}
+
+.portfolio-header {
+  margin-top: 120px;
+}
+
+/* PROJECTS AND JOBS */
+
+.project-section p,
+.resume-section p {
+  color: rgba(255, 255, 255, 0.55);
+}
+
+.resume-header h2,
+.resume-header h3 {
+  padding-left: 0px;
+  margin-bottom: 0px;
+}
+
+.project-section h3,
+.project-header h3,
+.resume-section h3,
+.resume-header h3 {
+  padding: 2px 0px;
+}
+
+.project-section h3,
+.project-header h3 {
+  margin: 10px 0px 30px 0px;
+}
+
+.resume-section h3,
+.resume-header h3 {
+  margin: 10px 0px 0px 0px;
+}
+
+.resume-section h3 {
+  margin: 50px 0px 20px;
+}
+
+/* JOBS */
+.job {
+  padding: 30px;
+  border-right: 0px;
+  border-left: 0px;
+}
+
+.job:first-child {
+  border-top: 0px;
+}
+
+.job:last-child {
+  border-bottom: 0px;
+}
+
+.job h4 {
+  margin-bottom: 3px;
+}
+
+.job .role {
+  margin-bottom: 0px;
+}
+
+.job .dates {
+  font-style: italic;
+}
+
+/* CONTACT SECTION */
+
+.contact-header {
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+
+.form-contact {
+  background-color: #121212;
+  color: white;
+}
+
+.form-contact label {
+  width: 100%;
+}
+
 .form-contact .form-group {
   margin-bottom: 10px;
 }
@@ -257,23 +284,13 @@ h3 {
   background-color: #121212 !important;
 }
 
-.project-section p,
-.resume-section p {
-  color: rgba(255, 255, 255, 0.55);
-}
-
-.form-contact {
-  background-color: #121212;
-  color: white;
-}
-
-.form-contact label {
-  width: 100%;
-}
+/* FOOTER */
 
 footer {
   padding: 80px 0px 50px;
 }
+
+/* RESPONSIVE STYLES */
 
 @media only screen and (min-width: 675px) {
   .project-header {
