--- a/css/styles.css
+++ b/css/styles.css
@@ -119,11 +119,14 @@ h3 {
 
 .project-header h2 {
   padding-left: 0px !important;
+  margin-bottom: 0px;
 }
 
-.card {
-  margin-bottom: 20px;
+.project-section .row {
   padding: 20px;
+  border-bottom: 1px solid #353535;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .project-col a {
@@ -299,7 +302,6 @@ footer {
 @media only screen and (min-width: 675px) {
   .project-header {
     margin-top: 20px;
-    margin-bottom: 15px;
   }
 
   .form-contact label {
