--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,8 @@ body {
   color: #161616;
   font-family: "Roboto Condensed", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 500;
+  font-weight: 400;
+  font-size: 1.2em;
   font-style: normal;
 }
 
